[package]
name = "k8s-patch-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.87.2", features = ["derive"] }
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
kube-runtime = "0.87.2"
getopts = "0.2.21"
tokio = { version = "1.35.1", features = ["full"] }
json-patch = "1.2.0"
